Many changes: added references and supported formats to configurations (GetServices Action -> GetConfigurations) and workflow composer HTML page. Implemented RestService.ping(). Now users can download output files by the workflows hystory page.

--- a/WebContent/pages/private/files/upload_file.xhtml
+++ b/WebContent/pages/private/files/upload_file.xhtml
@@ -23,7 +23,7 @@
                                       invalidFileMessage="Formato de arquivo inválido"
                                       fileUploadListener="#{fileUploadBean.handleUploadedFile}"
                                       cancelLabel="Cancelar" uploadLabel="Enviar"
-                                      label="Escolher Arquivo"
+                                      label="Escolher Arquivo" allowTypes="#{fileUploadBean.allowedTypes}"
                                       update="growl,panel" sizeLimit="268435456"/>
                     </p:panel>
                     <br />
