--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -196,27 +196,6 @@
                 Escolha se a entrada deste passo será um arquivo ou uma URL do arquivo
             </p:panel>
             <br />
-            <center>
-                <h:panelGrid columns="2" cellpadding="3" cellspacing="7">
-                    <p:fieldset legend="Argumentos de entrada">
-                        <center>
-                            <p:outputLabel value="Argumentos da linha de comando (ex: -X --cached -p 10)" /> <br />
-                            <h:inputText id="args" style="width: 100px; margin: 3px" value="#{workflowComposerBean.arguments}"/>
-                        </center>
-                    </p:fieldset>
-                    <p:fieldset legend="Arquivos de referência">
-                        <center>
-                            <p:outputLabel value="Referências disponíveis de entrada" /> <br />
-
-                            <p:selectOneMenu id="refs" value="#{workflowComposerBean.chosenReference}">
-                                <f:selectItem itemLabel="Selecione uma referência" itemValue="" />
-                                <f:selectItems value="#{workflowComposerBean.references}" />
-                            </p:selectOneMenu>
-                        </center>
-                    </p:fieldset>
-                </h:panelGrid>
-            </center>
-            <br />
             <p:accordionPanel>
                 <p:tab title="Arquivos">
                     <p:fieldset id="file_list_dlg" legend="Lista de Arquivos">
@@ -225,24 +204,26 @@
                             <p:commandLink value="aqui" action="upload_file"/>
                         </p:panel>
                         <br />
-                        <p:dataTable value="#{workflowComposerBean.loggedUser.files}" var="f" style="width: 60em"
-                                     paginator="true" rows="5" emptyMessage="Nenhum arquivo encontrado"
-                                     selection="#{workflowComposerBean.inputFiles}" rowKey="#{f.name}" >
+                        <center>
+                            <p:dataTable value="#{workflowComposerBean.loggedUser.files}" var="f" style="width: 1000px"
+                                         paginator="true" rows="5" emptyMessage="Nenhum arquivo encontrado"
+                                         selection="#{workflowComposerBean.inputFiles}" rowKey="#{f.name}" >
 
-                            <p:column headerText="Nome" width="25em" style="text-align: center">
-                                <p:outputLabel value="#{f.name}"/>
-                            </p:column>
+                                <p:column headerText="Nome" width="25em" style="text-align: center">
+                                    <p:outputLabel value="#{f.name}"/>
+                                </p:column>
 
-                            <p:column headerText="Upload em" width="25em" style="text-align: center">
-                                <p:outputLabel value="#{f.uploadTimestamp}"/>
-                            </p:column>
+                                <p:column headerText="Upload em" width="25em" style="text-align: center">
+                                    <p:outputLabel value="#{f.uploadTimestamp}"/>
+                                </p:column>
 
-                            <p:column headerText="Tamanho" width="25em" style="text-align: center">
-                                <p:outputLabel value="#{f.size} Kb"/>
-                            </p:column>
+                                <p:column headerText="Tamanho" width="25em" style="text-align: center">
+                                    <p:outputLabel value="#{f.size} Kb"/>
+                                </p:column>
 
-                            <p:column headerText="Escolha" style="text-align: center" selectionMode="multiple" />
-                        </p:dataTable>
+                                <p:column headerText="Escolha" style="text-align: center" selectionMode="multiple" />
+                            </p:dataTable>
+                        </center>
                     </p:fieldset>
                 </p:tab>
 
@@ -255,6 +236,37 @@
                 </p:tab>
 
             </p:accordionPanel>
+            <br />
+            <center>
+                <h:panelGrid columns="23" cellpadding="3" cellspacing="7">
+                    <p:fieldset legend="Argumentos de entrada">
+                        <center>
+                            <p:outputLabel value="Argumentos da linha de comando. Ex: -X --cached -p 10 (Opcional)" /> <br />
+                            <h:inputText id="args" style="width: 80%; margin: 3px" value="#{workflowComposerBean.arguments}" styleClass="font-courier"/>
+                        </center>
+                    </p:fieldset>
+                    <p:fieldset legend="Arquivos de referência (Opcional)">
+                        <center>
+                            <p:outputLabel value="Referências disponíveis de entrada" /> <br />
+
+                            <p:selectOneMenu id="refs" value="#{workflowComposerBean.chosenReference}" style="width: 230px; font-size: 110%">
+                                <f:selectItem itemLabel="Referência" itemValue="" />
+                                <f:selectItems value="#{workflowComposerBean.references}" />
+                            </p:selectOneMenu>
+                        </center>
+                    </p:fieldset>
+                    <p:fieldset legend="Formato do Arquivo de saida (Opcional)">
+                        <center>
+                            <p:outputLabel value="Formatos suportados" /> <br />
+
+                            <p:selectOneMenu id="formats" value="#{workflowComposerBean.fileFormat}">
+                                <f:selectItem itemLabel="Formato" itemValue="" />
+                                <f:selectItems value="#{workflowComposerBean.supportedFormats}" />
+                            </p:selectOneMenu>
+                        </center>
+                    </p:fieldset>
+                </h:panelGrid>
+            </center>
             <br />
             <p:panel>
                 Para nao utilizar dados de entrada, clique em 'Pular'. 
