Some changes to history visualization. Added WorkflowOutputFile, to link a workflow and its outputs.

--- a/WebContent/pages/private/home.xhtml
+++ b/WebContent/pages/private/home.xhtml
@@ -17,7 +17,8 @@
             <center>
                 <p:panel>
                     <br />
-                    <h1>BioNimbuZ</h1>
+                    <h:graphicImage value="/resources/img/logo_bionimbuz.jpg" style="margin: 8px"/>
+                    <br />
                     <h3>Página Inicial da Aplicação Web</h3>
                     <br />
                 </p:panel>
