Starting the rest communication to William algorithm

--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -244,14 +244,14 @@
                         </p:tabView>
                         <!--</p:panel>-->
                     </p:tab>
-<!--                     <p:tab id="template" title="Contrato do SLA">
+                     <p:tab id="template" title="Contrato do SLA">
                         <p:panel id="template_sla">   
-                             ======== Contrato ======== 
-                            <p:panel>
-
-                            </p:panel>
+                            <!-- ======== Contrato ======== -->
+                            <p:fieldset id="contract" legend="Contrato" style="border-color: #2980b9">
+                                
+                            </p:fieldset>
                         </p:panel>
-                    </p:tab>-->
+                    </p:tab>
                     <!--Resumo do workflow-->
                     <p:tab id="workflow_summary" title="Resumo deste Workflow">
                         <p:panel>
